apps/hackaton-fin-department/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-fin-department
  namespace: hackaton-fin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hackaton-fin-department
  template:
    metadata:
      labels:
        app: hackaton-fin-department
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: app
          image: registry.mortypython.ru/fin/hackaton-fin-department:main-20260927185501-e517adfb4978 # {"$imagepolicy": "flux-system:hackaton-fin-department"}
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
